Fixed alignment duh

--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -3194,6 +3194,7 @@
 	#footer {
 		padding: 5em 0 6em 0 ;
 		background-color: #f6f6f6;
+		text-align:center;
 	}
 
 		#footer > .inner {
